k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  labels:
    app: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: my-secret
      containers:
        - name: customer
          image: cluster-registry:32000/customer:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: "0.25"
              memory: "64Mi"
            requests:
              cpu: "0.10"
              memory: "32Mi"
