k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
spec:
  # type: LoadBalancer
  selector:
    app: customer
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
    - name: 8080-tcp
      protocol: TCP
      # port:80
      port: 8080
      targetPort: 8080
